<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/attendanceFragment"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/nav_attendance" />
    <item
        android:id="@+id/leaveFragment"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_requests" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>