<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_lg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_title"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLeaveType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:hint="@string/leave_hint_type" />

        <EditText
            android:id="@+id/etDateFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:hint="@string/leave_hint_from" />

        <EditText
            android:id="@+id/etDateTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:hint="@string/leave_hint_to" />

        <EditText
            android:id="@+id/etReason"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/space_md"
            android:gravity="top"
            android:hint="@string/leave_hint_reason"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnSubmitLeave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/leave_submit" />

        <TextView
            android:id="@+id/tvLeaveResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/leave_empty_result"
            android:textColor="@color/text_secondary" />

    </LinearLayout>
</ScrollView>